apps/ai-cluster/conductor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conductor-ai
  labels:
    ztp-modernization-factory: "true"
