apps/ai-cluster/conductor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conductor-extensions
  namespace: conductor-ai
  labels:
    app: conductor-extensions
    ztp-modernization-factory: "true"
spec:
  selector:
    app: conductor-extensions
  ports:
    - port: 8080
      targetPort: 8080
      name: http
