apps/ai-cluster/conductor/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: conductor-extensions
  namespace: conductor-ai
  annotations:
    haproxy.router.openshift.io/timeout: "300s"
  labels:
    ztp-modernization-factory: "true"
spec:
  to:
    kind: Service
    name: conductor-extensions
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
